# advent-of-code

./: .pre-commit-config.yaml  LICENSE.md  README.md  pyproject.toml
2019/: day_01.py  day_02.py  day_04.py  day_05.py  day_06.py  day_08.py
2019/answers/: 01.txt  02.txt  04.txt  06.txt
2020/: day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_06.py  day_07.py  day_08.py  day_09.py  day_10.py  day_11.py  day_12.py  day_13.py  day_14.py  day_15.py  day_16.py  day_19.py  day_21.py  day_22.py  day_23.py  day_24.py  day_25.py
2020/answers/: 02.txt  03.txt  06.txt  07.txt  08.txt  10.txt  11.txt  12.txt  14.txt  15.txt  16.txt  19.txt  21.txt  23.txt  24.txt
2021/: day_01.py  day_02.py  day_03.py  day_05.py  day_06.py  day_07.py  day_08.py  day_09.py  day_10.py  day_13.py  day_14.py
2021/answers/: 01.txt  03.txt  05.txt  09.txt  10.txt  13.txt  14.txt
2022/: day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_06.py  day_07.py  day_08.py  day_09.py  day_10.py  day_13.py  day_25.py
2022/answers/: 01.txt  (+6 more)
2023/: day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_06.py  day_07.py  day_08.py  day_09.py  day_10.py  day_11.py  day_13.py  day_14.py  day_15.py  day_16.py  day_18.py  day_19.py  day_20.py  day_21.py  day_22.py  day_23.py  day_24.py
2024/: day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_06.py  day_07.py  day_08.py  day_09.py  day_10.py  day_11.py  day_13.py  day_14.py  day_17.py
2025/: day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_06.py  day_07.py  day_08.py  day_09.py  day_10.py  day_11.py  day_12.py
(+37 files in other folders)
